Demos: update deprecated methods maxLength to maxlength and minLength to minlength

--- a/demo/custom-methods-demo.html
+++ b/demo/custom-methods-demo.html
@@ -39,8 +39,8 @@
 			rules: {
 				number: {
 					required:true,
-					minLength:3,
-					maxLength:15,
+					minlength:3,
+					maxlength:15,
 					number:true	
 				},
 				secret: "buga",
