--- a/test/index.html
+++ b/test/index.html
@@ -18,7 +18,9 @@
 	<h1 id="qunit-header">
 		<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Test Suite
 		<a href="?jquery=">jQuery 1.3.2</a>
+		<a href="?jquery=1.4.2">jQuery 1.4.2</a>
 		<a href="?jquery=1.4.4">jQuery 1.4.4</a>
+		<a href="?jquery=1.5">jQuery 1.5</a>
 		<a href="?jquery=1.5.1">jQuery 1.5.1</a>
 		</h1>
 	<div>
