Add type=text to some fields to get the testsuite to pass with 1.5.1. Pushed related core ticket to be promoted to blocker: http://bugs.jquery.com/ticket/8380

--- a/test/index.html
+++ b/test/index.html
@@ -55,10 +55,10 @@
 		<ol id="empty"></ol>
 		
 		<form id="testForm1">
-			<input class="{required:true,minlength:2}" title="buga" name="firstname" id="firstname" />
+			<input type="text" class="{required:true,minlength:2}" title="buga" name="firstname" id="firstname" />
 			<label id="errorFirstname" for="firstname" class="error">error for firstname</label>
-			<input class="{required:true}" title="buga" name="lastname" id="lastname" />
-			<input class="{required:true}" title="something" name="something" id="something" value="something" />
+			<input type="text" class="{required:true}" title="buga" name="lastname" id="lastname" />
+			<input type="text" class="{required:true}" title="something" name="something" id="something" value="something" />
 		</form>
 		
 		<form id="testForm1clean">
@@ -69,7 +69,7 @@
 		</form>
 		
 		<form id="userForm">
-			<input class="{required:true}" name="username" id="username" />
+			<input type="text" class="{required:true}" name="username" id="username" />
 			<input type="submit" name="submitButton" value="submitButtonValue" />
 		</form>
 		
