--- a/test/index.html
+++ b/test/index.html
@@ -17,11 +17,12 @@
 <body id="body">
 	<h1 id="qunit-header">
 		<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Test Suite
-		<a href="?jquery=">jQuery 1.3.2</a>
+		<a href="?jquery=1.3.2">jQuery 1.3.2</a>
 		<a href="?jquery=1.4.2">jQuery 1.4.2</a>
 		<a href="?jquery=1.4.4">jQuery 1.4.4</a>
 		<a href="?jquery=1.5">jQuery 1.5</a>
 		<a href="?jquery=1.5.1">jQuery 1.5.1</a>
+		<a href="?jquery=git">jQuery Latest (git)</a>
 		</h1>
 	<div>
 	</div>
