Fixed issue 78. Error/Valid styling applies to all radio buttons of same group for required validation.

--- a/test/index.html
+++ b/test/index.html
@@ -139,6 +139,11 @@
 			<input id="testEmail9" class="{required:true,email:true,messages:{required:'required',email:'email'}}" />
 		</form>
 		
+        <form id="testForm10">
+            <input type="radio" name="testForm10Radio" value="1" id="testForm10Radio1" />
+            <input type="radio" name="testForm10Radio" value="2" id="testForm10Radio2" />
+        </form>
+
 		<div id="simplecontainer">
 			<h3></h3>
 		</div>
