Now triggering validation on HTML5 input types url, search, tel
Related to bug listed here:
http://plugins.jquery.com/content/add-support-html5-types-and-attributes

--- a/test/index.html
+++ b/test/index.html
@@ -91,6 +91,21 @@
             <label id="errorNumber" for="number" class="error">error for number</label>
         </form>
 
+        <form id="urlForm">
+            <input id="url" name="url" type="url" title="Please enter your url" class="{required:true}" />
+            <label id="errorurl" for="url" class="error">error for url</label>
+        </form>
+
+        <form id="searchForm">
+            <input id="search" name="search" type="search" title="Please enter your search" class="{required:true}" />
+            <label id="errorsearch" for="search" class="error">error for search</label>
+        </form>
+
+        <form id="telForm">
+            <input id="tel" name="tel" type="tel" title="Please enter your tel" class="{required:true}" />
+            <label id="errortel" for="tel" class="error">error for tel</label>
+        </form>
+
         <form id="testForm2">
             <input class="{required:true}" type="radio" name="agree" id="agb" />
             <label for="agree" id="agreeLabel" class="xerror">error for agb</label>
