--- a/test/index.html
+++ b/test/index.html
@@ -271,6 +271,13 @@
 		<form id="ccform" method="get" action="">
 			<input id="cardnumber" name="cardnumber" />
 		</form>
+
+    <form id="productInfo">
+      <input class="productInfo" name="partnumber">
+      <input class="productInfo" name="description">
+      <input class="productInfo" name="color">
+    </form>
+
 	</div>
 	
 </body>
