--- a/test/index.html
+++ b/test/index.html
@@ -143,6 +143,11 @@
 			<input type="radio" name="testForm10Radio" value="1" id="testForm10Radio1" />
 			<input type="radio" name="testForm10Radio" value="2" id="testForm10Radio2" />
 		</form>
+		
+		<form id="testForm11">
+			<!-- HTML5 -->
+			<input class="{required:true}" required type="text" name="testForm11Text" id="testForm11text1" />
+		</form>
 
 		<div id="simplecontainer">
 			<h3></h3>
