--- a/test/selects/index.html
+++ b/test/selects/index.html
@@ -432,13 +432,5 @@ CODE
         <option value="WY" class="state">Wyoming</option>
 </select>
 
-
-
-
-<script src="http://www.google-analytics.com/urchin.js" type="text/javascript">
-</script>
-<script type="text/javascript">
-_uacct = "UA-1499652-1";
-urchinTracker();
-</script></body>
+</body>
 </html>
