--- a/test/index.html
+++ b/test/index.html
@@ -276,6 +276,10 @@
 		<form id="ccform" method="get" action="">
 			<input id="cardnumber" name="cardnumber" />
 		</form>
+
+		<form id="maxWordsForm">
+			<input id="maxWordsTest" name="maxWordsTest" type="text" />
+		</form>
 	</div>
 
 </body>
