Fix bad double quote in test fixtures

--- a/test/index.html
+++ b/test/index.html
@@ -203,7 +203,7 @@
 
 			<button name="button">Button</button>
 
-			<textarea id="area1" name="area1"">foobar</textarea>
+			<textarea id="area1" name="area1">foobar</textarea>
 
 
 			<textarea id="area2" name="area2"></textarea>
