--- a/demo/file_input.html
+++ b/demo/file_input.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>jQuery validation plug-in - comment form example</title>
 
 <link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="css/cmxform.css" />
 
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../jquery.validate.js" type="text/javascript"></script>
@@ -14,12 +15,6 @@ $(document).ready(function() {
 	$("#fileForm").validate();
 });
 </script>
-
-<style type="text/css">
-#fileForm { width: 500px; }
-#fileForm label { width: 250px; }
-#fileForm label.error, #fileForm input.submit { margin-left: 253px; }
-</style>
 
 </head>
 <body>
