Cleaned up comparison code for accept attribute and changed demo to HTML5 doctype

--- a/demo/file_input.html
+++ b/demo/file_input.html
@@ -24,7 +24,7 @@ $(document).ready(function() {
 		<legend>Select the indicated type of files?</legend>
 		<p>
 			<label for="file1">Select a plain text file (e.g. *.txt)</label>
-			<input type="file" id="file1" name="name" class="required" accept="text/plain" />
+			<input type="file" id="file1" name="name" class="required" accept="Text/plain" />
 		</p>
 		<p>
 			<label for="file2">Select any image file</label>
