Added pseudo selector for text input types to fix issue with default empty type attribute. Added tests and some test markup. Fixes #217

--- a/test/index.html
+++ b/test/index.html
@@ -149,6 +149,11 @@
 			<input required type="text" name="testForm11Text" id="testForm11text1" />
 		</form>
 
+		<form id="testForm12">
+			<!-- empty "type" attribute -->
+			<input name="testForm12text" id="testForm12text" class="{required:true}" />
+		</form>
+
 		<div id="simplecontainer">
 			<h3></h3>
 		</div>
