--- a/test/index.html
+++ b/test/index.html
@@ -286,6 +286,7 @@
 			<input class="productInfo" name="partnumber">
 			<input class="productInfo" name="description">
 			<input class="productInfo" name="color">
+			<input class="productInfo" type="checkbox" name="discount" />
 		</form>
 
 	</div>
