Fixed delegate bug for dynamic-totals demo. Fixes #51

--- a/demo/dynamic-totals.html
+++ b/demo/dynamic-totals.html
@@ -44,7 +44,7 @@ $().ready(function() {
 	$("#add").click(addRow);
 	
 	// check keyup on quantity inputs to update totals field
-	$("#orderform").delegate("keyup", "input.quantity", function(event) {
+	$("#orderform").validateDelegate("input.quantity", "keyup", function(event) {
 		var totals = 0;
 		$("#orderitems input.quantity").each(function() {
 			totals += +this.value;
