Fixed TinyMCE Demo and added link on demo page. Fixes #382

--- a/demo/tinymce/index.html
+++ b/demo/tinymce/index.html
@@ -21,6 +21,7 @@
 			// update underlying textarea before submit validation
 			tinyMCE.triggerSave();
 		}).validate({
+			ignore: "",
 			rules: {
 				title: "required",
 				content: "required"
