--- a/demo/index.html
+++ b/demo/index.html
@@ -204,6 +204,7 @@ $().ready(function() {
 	<li><a href="custom-methods-demo.html">Custom methods and message display.</a></li>
 	<li><a href="dynamic-totals.html">Dynamic forms</a></li>
 	<li><a href="themerollered.html">Forms styled with jQuery UI Themeroller</a></li>
+	<li><a href="tinymce/">TinyMCE Demo</a></li>
 </ul>
 <h3>Real-world examples</h3>
 <ul>
