Added jQuery Mobile demo. Fixes #249

--- a/demo/index.html
+++ b/demo/index.html
@@ -206,6 +206,7 @@ $().ready(function() {
 	<li><a href="themerollered.html">Forms styled with jQuery UI Themeroller</a></li>
 	<li><a href="tinymce/">TinyMCE Demo</a></li>
 	<li><a href="file_input.html">File inputs</a></li>
+	<li><a href="jquerymobile.html">jQuery Mobile Form Validation</a></li>
 </ul>
 <h3>Real-world examples</h3>
 <ul>
