--- a/demo/index.html
+++ b/demo/index.html
@@ -205,6 +205,7 @@ $().ready(function() {
 	<li><a href="dynamic-totals.html">Dynamic forms</a></li>
 	<li><a href="themerollered.html">Forms styled with jQuery UI Themeroller</a></li>
 	<li><a href="tinymce/">TinyMCE Demo</a></li>
+	<li><a href="file_input.html">File inputs</a></li>
 </ul>
 <h3>Real-world examples</h3>
 <ul>
