--- a/test/index.html
+++ b/test/index.html
@@ -23,6 +23,7 @@
 		<a href="?jquery=1.4.4">jQuery 1.4.4</a>
 		<a href="?jquery=1.5.2">jQuery 1.5.2</a>
 		<a href="?jquery=1.6.1">jQuery 1.6.1</a>
+		<a href="?jquery=1.7.2">jQuery 1.7.2</a>
 		<a href="?jquery=git">jQuery Latest (git)</a>
 		</h1>
 	<div>
