--- a/test/index.html
+++ b/test/index.html
@@ -294,6 +294,12 @@
 			<input class="productInfo" type="checkbox" name="discount" />
 		</form>
 
+        <form id="multipleFields">
+            <input name="multipleField[]">
+            <input name="multipleField[]">
+            <input name="multipleField[]">
+        </form>
+
 	</div>
 
 </body>
