--- a/test/index.html
+++ b/test/index.html
@@ -155,6 +155,10 @@
 			<input name="testForm12text" id="testForm12text" class="{required:true}" />
 		</form>
 
+		<form id="testForm13">
+			<input name="testForm13date" id="testForm13date" type="date" min="1980-02-11" max="1990-01-01" />
+		</form>
+
 		<form id="dataMessages">
 			<input name="dataMessagesName" id="dataMessagesName" class="required" data-msg-required="You must enter a value here" />
 		</form>
