Update dependencies: Remove old jQuery versions, include new ones. Update QUnit and Form plugin.

--- a/test/index.html
+++ b/test/index.html
@@ -2,28 +2,27 @@
 <html id="html">
 <head>
 	<title>jQuery - Validation Test Suite</title>
-	<link rel="Stylesheet" media="screen" href="qunit/qunit.css" />
-	<script type="text/javascript" src="jquery.js"></script>
-	<script type="text/javascript" src="../lib/jquery.form.js"></script>
-	<script type="text/javascript" src="qunit/qunit.js"></script>
-	<script type="text/javascript" src="../lib/jquery.metadata.js"></script>
-	<script type="text/javascript" src="../lib/jquery.mockjax.js"></script>
-	<script type="text/javascript" src="../jquery.validate.js"></script>
-	<script type="text/javascript" src="../additional-methods.js"></script>
-	<script type="text/javascript" src="test.js"></script>
-	<script type="text/javascript" src="rules.js"></script>
-	<script type="text/javascript" src="messages.js"></script>
-	<script type="text/javascript" src="methods.js"></script>
+	<link rel="stylesheet" href="qunit/qunit.css" />
+	<script src="jquery.js"></script>
+	<script src="../lib/jquery.form.js"></script>
+	<script src="qunit/qunit.js"></script>
+	<script src="../lib/jquery.metadata.js"></script>
+	<script src="../lib/jquery.mockjax.js"></script>
+	<script src="../jquery.validate.js"></script>
+	<script src="../additional-methods.js"></script>
+	<script src="test.js"></script>
+	<script src="rules.js"></script>
+	<script src="messages.js"></script>
+	<script src="methods.js"></script>
 </head>
 <body id="body">
 	<h1 id="qunit-header">
 		<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Test Suite
-		<a href="?jquery=1.3.2">jQuery 1.3.2</a>
-		<a href="?jquery=1.4.2">jQuery 1.4.2</a>
 		<a href="?jquery=1.4.4">jQuery 1.4.4</a>
 		<a href="?jquery=1.5.2">jQuery 1.5.2</a>
-		<a href="?jquery=1.6.1">jQuery 1.6.1</a>
+		<a href="?jquery=1.6.4">jQuery 1.6.4</a>
 		<a href="?jquery=1.7.2">jQuery 1.7.2</a>
+		<a href="?jquery=1.7.2">jQuery 1.8.3</a>
 		<a href="?jquery=git">jQuery Latest (git)</a>
 		</h1>
 	<div>
