--- a/test/index.html
+++ b/test/index.html
@@ -264,7 +264,6 @@
 			<input type="checkbox" id="checkable3" name="checkablesgroup" />
 		</form>
 
-
 		<form id="subformRequired">
 			<div class="billingAddressControl">
             	<input type="checkbox" id="bill_to_co" name="bill_to_co" class="toggleCheck" checked="checked" style="width: auto;" tabindex="1" />
@@ -296,6 +295,21 @@
 			<label id="targetLabel" class="error" for="updateLabelInput">Some server-side error</label>
 		</form>
 
+		<form id="ranges">
+			<input type="text" id="minDateInvalid" name="minDateInvalid" min="2012-12-21" value="2012-11-21"/>
+			<input type="text" id="maxDateInvalid" ngame="maxDateInvalid" max="2012-12-21" value="2013-01-21"/>
+			<input type="text" id="rangeDateInvalidGreater" name="rangeDateInvalidGreater" min="2012-11-21" max="2013-01-21" value="2013-02-21"/>
+			<input type="text" id="rangeDateInvalidLess" name="rangeDateInvalidLess" min="2012-11-21" max="2013-01-21" value="2012-10-21"/>
+
+			<input type="text" id="minDateValid" name="minDateValid" min="2012-11-21" value="2012-12-21"/>
+			<input type="text" id="maxDateValid" name="maxDateValid" max="2013-01-21" value="2012-12-21"/>
+			<input type="text" id="rangeDateValid" name="rangeDateValid" min="2012-11-21" max="2013-01-21" value="2012-12-21"/>
+
+			<input type="text" id="rangeTextInvalidGreater" name="rangeTextInvalidGreater" min="BBB" max="YYY" value="ZZZ"/>
+			<input type="text" id="rangeTextInvalidLess" name="rangeTextInvalidLess" min="BBB" max="YYY" value="AAA"/>
+
+			<input type="text" id="rangeTextValid" name="rangeTextValid" min="AAA" max="ZZZ" value="NNN"/>
+		</form>
 	</div>
 
 </body>
