--- a/test/index.html
+++ b/test/index.html
@@ -300,6 +300,11 @@
 			<input type="date" id="minDateValid" name="minDateValid" min="2012-11-21" value="2012-12-21"/>
 			<input type="date" id="maxDateValid" name="maxDateValid" max="2013-01-21" value="2012-12-21"/>
 			<input type="date" id="rangeDateValid" name="rangeDateValid" min="2012-11-21" max="2013-01-21" value="2012-12-21"/>
+
+			<input type="text" id="rangeTextInvalidGreater" name="rangeTextInvalidGreater" min="BBB" max="YYY" value="ZZZ"/>
+			<input type="text" id="rangeTextInvalidLess" name="rangeTextInvalidLess" min="BBB" max="YYY" value="AAA"/>
+
+			<input type="text" id="rangeTextValid" name="rangeTextValid" min="AAA" max="ZZZ" value="NNN"/>
 		</form>
 	</div>
 
