will now update pre-existing labels

--- a/test/index.html
+++ b/test/index.html
@@ -291,6 +291,11 @@
 			<input class="productInfo" name="color">
 			<input class="productInfo" type="checkbox" name="discount" />
 		</form>
+		
+		<form id="updateLabel">
+			<input class="required" name="updateLabelInput" id="updateLabelInput" data-msg-required="You must enter a value here" />
+			<label id="targetLabel" class="error" for="updateLabelInput">Some server-side error</label>
+		</form>
 
 	</div>
 
