Fixed minor code issues found by ReSharper
Missing semicolons and wrong CSS paths fixed.

--- a/test/large.html
+++ b/test/large.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>Test for jQuery validate() plugin</title>
 
-<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="../demo/css/screen.css" />
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="../lib/jquery.metadata.js" type="text/javascript"></script>
 <script src="../lib/jquery.ajaxQueue.js" type="text/javascript"></script>
