Minor: Fixed invalid HTML in test\index.html

--- a/test/index.html
+++ b/test/index.html
@@ -285,9 +285,9 @@
 		</form>
 
 		<form id="productInfo">
-			<input class="productInfo" name="partnumber">
-			<input class="productInfo" name="description">
-			<input class="productInfo" name="color">
+			<input class="productInfo" name="partnumber" />
+			<input class="productInfo" name="description" />
+			<input class="productInfo" name="color" />
 			<input class="productInfo" type="checkbox" name="discount" />
 		</form>
 
