--- a/test/events.html
+++ b/test/events.html
@@ -4,7 +4,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 <title>Test for jQuery validate() plugin</title>
 
-<link rel="stylesheet" type="text/css" media="screen" href="../demo/css/screen.css" />
+<link rel="stylesheet" type="text/css" media="screen" href="css/screen.css" />
 <script src="../lib/jquery.js" type="text/javascript"></script>
 <script src="firebug/firebug.js" type="text/javascript"></script>
 
@@ -17,7 +17,7 @@ $().ready(function() {
 		focusout: function() {
 			$(this).removeClass("focus");
 		}
-	};
+	}
 	$("#commentForm").delegate("focusin focusout", ":text, textarea", function(event) {
 		/*
 		this.addClass("focus").one("blur", function() {
@@ -28,7 +28,7 @@ $().ready(function() {
 	});
 	$("#remove").click(function() {
 		$("#commentForm").unbind("focusin");
-	});
+	})
 });
 </script>
 
