--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,8 @@
 <body id="body">
 	<h1 id="qunit-header">
 		<a href="http://bassistance.de/jquery-plugins/jquery-plugin-validation/">jQuery Validation Plugin</a> Test Suite
+		<a href="?jquery=1.4.4">jQuery 1.4.4</a>
+		<a href="?jquery=1.5.2">jQuery 1.5.2</a>
 		<a href="?jquery=1.6.4">jQuery 1.6.4</a>
 		<a href="?jquery=1.7.2">jQuery 1.7.2</a>
 		<a href="?jquery=1.8.3">jQuery 1.8.3</a>
@@ -285,9 +287,9 @@
 		</form>
 
 		<form id="productInfo">
-			<input class="productInfo" name="partnumber" />
-			<input class="productInfo" name="description" />
-			<input class="productInfo" name="color" />
+			<input class="productInfo" name="partnumber">
+			<input class="productInfo" name="description">
+			<input class="productInfo" name="color">
 			<input class="productInfo" type="checkbox" name="discount" />
 		</form>
 
