Add a min-height to test container for jQuery-git compat

--- a/test/index.html
+++ b/test/index.html
@@ -160,7 +160,7 @@
 			<h3></h3>
 		</div>
 
-		<div id="container"></div>
+		<div id="container" style="min-height:1px"></div>
 
 		<ol id="labelcontainer"></ol>
 
