Input type="number" range tests

--- a/test/index.html
+++ b/test/index.html
@@ -309,6 +309,10 @@
 			<input type="text" id="rangeTextInvalidLess" name="rangeTextInvalidLess" min="BBB" max="YYY" value="AAA"/>
 
 			<input type="text" id="rangeTextValid" name="rangeTextValid" min="AAA" max="ZZZ" value="NNN"/>
+			
+			<input type="number" id="rangeNumberValid" name="rangeNumberValid" min="1" max="100" value="2"/>
+			<input type="number" id="rangeNumberTooHigh" name="rangeNumberTooHigh" min="1" max="100" value="101"/>
+			<input type="number" id="rangeNumberTooLow" name="rangeNumberTooLow" min="1" max="100" value="0"/>
 		</form>
 		
 		<form id="bypassValidation">
