--- a/demo/custom-messages-data-demo.html
+++ b/demo/custom-messages-data-demo.html
@@ -53,7 +53,7 @@ form input.submit { margin-left: 253px; }
 	</fieldset>
 </form>
 
-<!-- Custom message for "required" in metadata is overriden by a validate option -->
+<!-- Custom message for "required" in metadata is overridden by a validate option -->
 <form class="cmxform" id="commentForm2" method="post" action="">
 	<fieldset>
 		<legend>Please enter your email address</legend>
