--- a/demo/index.html
+++ b/demo/index.html
@@ -195,12 +195,12 @@ $().ready(function() {
 	</fieldset>
 </form>
 
-<h3>Syntetic examples</h3>
+<h3>Synthetic examples</h3>
 <ul>
 	<li><a href="errorcontainer-demo.html">Error message containers in action</a></li>
 	<li><a href="custom-messages-data-demo.html">Custom Messages as Element Data</a></li>
 	<li><a href="radio-checkbox-select-demo.html">Radio and checkbox buttons and selects</a></li>
-	<li><a href="ajaxSubmit-intergration-demo.html">Integration with Form Plugin (AJAX submit)</a></li>
+	<li><a href="ajaxSubmit-integration-demo.html">Integration with Form Plugin (AJAX submit)</a></li>
 	<li><a href="custom-methods-demo.html">Custom methods and message display.</a></li>
 	<li><a href="dynamic-totals.html">Dynamic forms</a></li>
 	<li><a href="themerollered.html">Forms styled with jQuery UI Themeroller</a></li>
